2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Beautify code.

	* src/thbrk/brk-maximal.c (th_brkpos_hints): Adjust indents.
	* src/thbrk/brk-maximal.c (brk_recover): Adjust brackets.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (th_brkpos_hints): Add check for cases like
	'เฉพาะ'.

2009-06-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Remove obsolete Win32 checking stuffs.

2009-06-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add symbol versioning.

	* configure.in: Check for -version-script support in linker.
	* +src/libthai.map: Add symbol map.
	* src/Makefile.am:
	  - Conditionally supply -version-script, if supported, or
	    -export-symbols otherwise, to linker.
	  - Conditionally specify libthai.map or libthai.def as libthai.la
	    dependency, according to corresponding linker option applied.
	  - Include libthai.map in EXTRA_DISTS.

2009-06-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (th_brkpos_hints):
	Fix comment style to C, not C++.

2009-06-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix wrong case of syllable like 'ช็อก'.

	* src/thbrk/brk-maximal.c (th_brkpos_hints):
	  - The case of SARA E/AE with next third character as MAITAIKHU should
	    not apply when the MAITAIKHU is followed by O ANG or WO WAEN.
	    That's a signature of new syllable, such as 'ช็อก'.
	  - Add the case of syllable like 'ช็อก' or 'ช็วก'.

2009-06-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Refactor so brk hints is prepared only once per brk_maximal_do() call.

	* src/thbrk/brk-maximal.c (brk_maximal_do, +brk_maximal_do_impl):
	Split implementation code into _impl() function, and let the
	original brk_maximal_do() be a wrapper doing necessary preparations.

	* src/thbrk/brk-maximal.c (brk_recover):
	Call brk_maximal_do_impl() instead of brk_maximal_do(), passing the
	appropriate brk hints subarray to it.
